[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyrex"
version = "0.6.0"
description = "Hyrex is a modern, open-source task orchestration framework."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Trevor Reed", email = "trevor@usekura.com" },
    { name = "Mark Dawson", email = "mark@usekura.com" }
]
keywords = ["hyrex", "task", "queue", "async"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
] 
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.9",
    "annotated-types>=0.7.0",
    "psycopg[binary,pool]>=3.2.1",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.8.2",
    "pydantic_core>=2.20.1",
    "requests>=2.32.3",
    "SQLAlchemy>=2.0.31",
    "sqlmodel>=0.0.21",
    "typer>=0.12.5",
    "typing_extensions>=4.12.2",
    "uuid7>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "black>=22.3.0",  # For code formatting
]

[project.scripts]
hyrex = "hyrex.cli:cli"

[project.urls]
"Homepage" = "https://github.com/hyrex-labs/hyrex-python"
"Source Code" = "https://github.com/hyrex-labs/hyrex-python"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
